Changed colour  of header a

--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -50,7 +50,7 @@
         }
 
         .header-bar a{
-            color: rgb(247, 247, 247);
+            color: #fff;
             text-decoration: none;
         }
         .task-wrapper{
