--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -44,7 +44,7 @@
             color:#fff;
             padding: 10px;
             border-radius: 5px 5px 0 0;
-            background: linear-gradient(90deg, #b1e284 0%, #66be34 43%, #4dcd08 100%);
+            background: linear-gradient(90deg, #b1e284 0%, #66be34 43%, #FF0000 100%);
         
 
         }
